# web

./: .vercelignore  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  Dockerfile  LOCAL_DEPLOYMENT.md  Pipfile  Procfile  README.md  app.py  build.sh  check_deploy.py  nixpacks.toml  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  setup.py  start_cloudflare.bat  start_server.bat  vercel.json
ML_Model_Predictor/: .dockerignore  Dockerfile  README.md  SIMPLE_README.md  TRAFFIC_README.md  app.py  check_deploy.py  deploy.py  nixpacks.toml  requirements.txt  simple_rf.py  test_rf.py
ML_Model_Predictor/static/: traffic_style.css
ML_Model_Predictor/templates/: simple_rf.html
api/: index.py  predict.py
