[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-predictor"
version = "1.0.0"
description = "Traffic Congestion Predictor using Random Forest"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "joblib==1.3.2",
    "scikit-learn==1.3.2",
    "jinja2==3.1.2",
    "numpy==1.26.4",
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "python-multipart==0.0.6",
    "gunicorn==21.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
